--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   contacts_service: ^0.0.7
   simple_permissions: ^0.1.6
   shared_preferences: ^0.4.2
+  fluttertoast: ^2.0.7
 
 dev_dependencies:
   flutter_test:
