--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   simple_permissions: ^0.1.6
   shared_preferences: ^0.4.2
   fluttertoast: ^2.0.7
+  numberpicker: ^0.1.5
 
 dev_dependencies:
   flutter_test:
