--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,10 +14,17 @@ dependencies:
   fluttertoast: ^2.0.7
   numberpicker: ^0.1.5
 
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  flutter_launcher_icons: ^0.5.2
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/icon/icon.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
@@ -32,6 +39,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   # assets:
+  assets:
+  - assets/icon/icon.png
+  - assets/icon/baricon.png
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
 
