--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ flutter:
   assets:
   - assets/icon/icon.png
   - assets/icon/baricon.png
+  - assets/img/background.png
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
 
