--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   shared_preferences: ^0.4.2
   fluttertoast: ^2.0.7
   numberpicker: ^0.1.5
+  url_launcher: ^3.0.3
 
 
 dev_dependencies:
