--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -23,11 +23,11 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "me.zeyadk.tempcontact"
+        applicationId "me.zeyadk.temporarycontacts"
         minSdkVersion 16
         targetSdkVersion 27
         versionCode 1
-        versionName "1.0"
+        versionName "1.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
 
